       no matter what language was set. (Stefan)
- BUG: The repository browser didn't work for file:///
       URLs which had escaped chars in it. (Stefan)
- BUG: If the "X"-Button of the progress window was
       pressed twice the window just hang. (Stefan)
- BUG: The external merge program was started
       with the filenames only instead of the
       full filepaths. (Stefan)
- ADD: Branch/Tag is available for single files
       too, not just folders. (Stefan)
- ADD: Several new commands for the repository
       browser. Also a new command in the context
       menu to start the repo browser. (Stefan)

Version 0.19
- BUG: The conflicted files weren't always determined
       correctly. (Stefan)
- BUG: The settings page for the menu layout set the
       settings to the default values if the page
       wasn't selected. (Dimentiy)
- BUG: File-entries in the log dialog could not be
       selected if the message contained more than
       three lines. (Stefan)
- BUG: Issue 67: Show Log + Escape = crash. fixed. (Stefan)
- BUG: There was a memory leak which made explorer use
       a huge amount of RAM over time. (Stefan)
- BUG: The cache timeout wasn't calculated correctly.
       This lead to wrong icon overlays and needed
       several "F5" to get the right ones. (Stefan)
- CHG: The "rename" command now uses the --force option
       by default so that modified files can be renamed
       too. (Stefan)
- CHG: The log dialog got minimize/maximize buttons. (Stefan)
- ADD: Log messages selectable to copy them to the
       clipboard (with Ctrl-C). Issue 64. (Stefan)
- ADD: Search function for log messages. (Stefan)
- ADD: Properties can be set/removed recursively. (Stefan)
- ADD: "Find" button in the merge dialog for finding
       the revision at which the branch occurred.
       Also the log dialog is shown to help decide
       which revisions should be merged in.
       Please note: this works only correct if the