@@ -147,6 +147,7 @@ protected:
 	stdstring itemurl;
 	stdstring itemshorturl;
 	svn_revnum_t columnrev;			///< holds the corresponding revision to the file/dir above
+	HANDLE hMutex;
 
 #define MAKESTRING(ID) LoadStringEx(g_hResInst, ID, stringtablebuffer, sizeof(stringtablebuffer), (WORD)CRegStdWORD(_T("Software\\TortoiseSVN\\LanguageID"), MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT)))
 //#define MAKESTRING(ID) LoadString(g_hResInst, ID, stringtablebuffer, sizeof(stringtablebuffer))
