@@ -1,9 +1,9 @@
-#define FILEVER_INCVERSION        0,19,0,194
-#define PRODUCTVER_INCVERSION     0,19,0,194
-#define STRFILEVER_INCVERSION     "0, 19, 0, 194\0"
-#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 194\0"
+#define FILEVER_INCVERSION        0,19,0,195
+#define PRODUCTVER_INCVERSION     0,19,0,195
+#define STRFILEVER_INCVERSION     "0, 19, 0, 195\0"
+#define STRPRODUCTVER_INCVERSION  "0, 19, 0, 195\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             19
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  194
+#define TSVN_VERBUILD_INCVERSION  195
 
