@@ -7,6 +7,9 @@
 - BUG: The external merge program was started
        with the filenames only instead of the
        full filepaths. (Stefan)
+- BUG: The status cache wasn't thread-safe and
+       also not process-safe. Thanks to Luebbe
+       for reminding me. (Stefan)
 - ADD: Branch/Tag is available for single files
        too, not just folders. (Stefan)
 - ADD: Several new commands for the repository
